Fix a bug in No161OneEditDistance. Replace remove(0) with removeFirst() for LinkedList in No056MergeIntervals.